# mirrord-mcp

./: Cargo.toml  LICENSE  README.md
src/: main.rs  run_service.rs
src/tools/: executor.rs  mod.rs  node.rs  python.rs  runnable.rs  rust.rs  tool.rs  utils.rs
tools/: run-service.json  run_service.json
