[package]
edition = "2024"
name = "mirrord-mcp-server"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
axum = "0.8"
log = "0.4"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["server", "transport-sse-server"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tempfile = "3.19.1"
tokio = {version = "1.0", features = ["full"]}
tokio-stream = "0.1"
tokio-util = "0.7.14"
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt"]}
uuid = {version = "1.10", features = ["v4"]}

[dev-dependencies]
hyper = "1.6"
mockall = "0.13"
tower = "0.5"
